[package]
name = "timelord"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "*"
moniclock = "*"
ciborium = "*"
serde = "*"
serde_derive = "*"
tarpc = {version = "*", features = ["full"]}
futures = "*"
uuid = {version = "*", features = ["v4", "serde"]}
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}
thiserror = "*"

[profile.dev]
panic = 'abort'